// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Question defaults QuestionHtml html 1`] = `
<div
  className="sc-iqcoie jxStcU openstax-question"
  data-question-number={1}
  data-test-id="question"
>
  <div
    className="sc-kDDrLX eoGjPH"
  >
    <div>
      <div
        className="sc-jSMfEi buOdRb question-stem"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Is this a question?",
          }
        }
        data-question-number={1}
      />
      <div
        aria-label="Answer choices"
        className="answers-table"
        role="radiogroup"
      >
        <div
          className="openstax-answer"
        >
          <div
            className="answers-answer disabled"
          >
            <input
              checked={false}
              className="answer-input-box"
              disabled={true}
              id="1-option-0"
              name="1-options"
              onChange={[Function]}
              type="radio"
            />
            <label
              className="answer-label"
              htmlFor="1-option-0"
            >
              <span
                aria-hidden="true"
                className="answer-letter-wrapper"
                data-answer-choice="A"
                data-test-id="answer-choice-A"
              />
              <span
                className="sc-papXJ gydcjH answer-choice-label"
              >
                Choice A:
              </span>
              <div
                className="answer-answer"
              >
                <div
                  aria-atomic="true"
                  aria-live="polite"
                  className="answer-indicator-live"
                  role="status"
                />
                <span
                  className="sc-jSMfEi buOdRb answer-content"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "True",
                    }
                  }
                />
              </div>
            </label>
          </div>
        </div>
        <div
          className="openstax-answer"
        >
          <div
            className="answers-answer disabled"
          >
            <input
              checked={false}
              className="answer-input-box"
              disabled={true}
              id="1-option-1"
              name="1-options"
              onChange={[Function]}
              type="radio"
            />
            <label
              className="answer-label"
              htmlFor="1-option-1"
            >
              <span
                aria-hidden="true"
                className="answer-letter-wrapper"
                data-answer-choice="B"
                data-test-id="answer-choice-B"
              />
              <span
                className="sc-papXJ gydcjH answer-choice-label"
              >
                Choice B:
              </span>
              <div
                className="answer-answer"
              >
                <div
                  aria-atomic="true"
                  aria-live="polite"
                  className="answer-indicator-live"
                  role="status"
                />
                <span
                  className="sc-jSMfEi buOdRb answer-content"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "False",
                    }
                  }
                />
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Question defaults collaborator_solutions 1`] = `
<div
  className="sc-iqcoie jxStcU openstax-question"
  data-question-number={1}
  data-test-id="question"
>
  <div
    className="sc-kDDrLX eoGjPH"
  >
    <div>
      <div
        className="sc-jSMfEi buOdRb question-stem"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Is this a question?",
          }
        }
        data-question-number={1}
      />
      <div
        aria-label="Answer choices"
        className="answers-table"
        role="radiogroup"
      >
        <div
          className="openstax-answer"
        >
          <div
            className="answers-answer disabled"
          >
            <input
              checked={false}
              className="answer-input-box"
              disabled={true}
              id="1-option-0"
              name="1-options"
              onChange={[Function]}
              type="radio"
            />
            <label
              className="answer-label"
              htmlFor="1-option-0"
            >
              <span
                aria-hidden="true"
                className="answer-letter-wrapper"
                data-answer-choice="A"
                data-test-id="answer-choice-A"
              />
              <span
                className="sc-papXJ gydcjH answer-choice-label"
              >
                Choice A:
              </span>
              <div
                className="answer-answer"
              >
                <div
                  aria-atomic="true"
                  aria-live="polite"
                  className="answer-indicator-live"
                  role="status"
                />
                <span
                  className="sc-jSMfEi buOdRb answer-content"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "True",
                    }
                  }
                />
              </div>
            </label>
          </div>
        </div>
        <div
          className="openstax-answer"
        >
          <div
            className="answers-answer disabled"
          >
            <input
              checked={false}
              className="answer-input-box"
              disabled={true}
              id="1-option-1"
              name="1-options"
              onChange={[Function]}
              type="radio"
            />
            <label
              className="answer-label"
              htmlFor="1-option-1"
            >
              <span
                aria-hidden="true"
                className="answer-letter-wrapper"
                data-answer-choice="B"
                data-test-id="answer-choice-B"
              />
              <span
                className="sc-papXJ gydcjH answer-choice-label"
              >
                Choice B:
              </span>
              <div
                className="answer-answer"
              >
                <div
                  aria-atomic="true"
                  aria-live="polite"
                  className="answer-indicator-live"
                  role="status"
                />
                <span
                  className="sc-jSMfEi buOdRb answer-content"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "False",
                    }
                  }
                />
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Question defaults formats 1`] = `
<div
  className="sc-iqcoie jxStcU openstax-question"
  data-question-number={1}
  data-test-id="question"
>
  <div
    className="sc-kDDrLX eoGjPH"
  >
    <div>
      <div
        className="sc-jSMfEi buOdRb question-stem"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Is this a question?",
          }
        }
        data-question-number={1}
      />
      <div
        aria-label="Answer choices"
        className="answers-table"
        role="radiogroup"
      >
        <div
          className="openstax-answer"
        >
          <div
            className="answers-answer disabled"
          >
            <input
              checked={false}
              className="answer-input-box"
              disabled={true}
              id="1-option-0"
              name="1-options"
              onChange={[Function]}
              type="radio"
            />
            <label
              className="answer-label"
              htmlFor="1-option-0"
            >
              <span
                aria-hidden="true"
                className="answer-letter-wrapper"
                data-answer-choice="A"
                data-test-id="answer-choice-A"
              />
              <span
                className="sc-papXJ gydcjH answer-choice-label"
              >
                Choice A:
              </span>
              <div
                className="answer-answer"
              >
                <div
                  aria-atomic="true"
                  aria-live="polite"
                  className="answer-indicator-live"
                  role="status"
                />
                <span
                  className="sc-jSMfEi buOdRb answer-content"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "True",
                    }
                  }
                />
              </div>
            </label>
          </div>
        </div>
        <div
          className="openstax-answer"
        >
          <div
            className="answers-answer disabled"
          >
            <input
              checked={false}
              className="answer-input-box"
              disabled={true}
              id="1-option-1"
              name="1-options"
              onChange={[Function]}
              type="radio"
            />
            <label
              className="answer-label"
              htmlFor="1-option-1"
            >
              <span
                aria-hidden="true"
                className="answer-letter-wrapper"
                data-answer-choice="B"
                data-test-id="answer-choice-B"
              />
              <span
                className="sc-papXJ gydcjH answer-choice-label"
              >
                Choice B:
              </span>
              <div
                className="answer-answer"
              >
                <div
                  aria-atomic="true"
                  aria-live="polite"
                  className="answer-indicator-live"
                  role="status"
                />
                <span
                  className="sc-jSMfEi buOdRb answer-content"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "False",
                    }
                  }
                />
              </div>
            </label>
          </div>
        </div>
      </div>
      <div
        className="formats-listing"
      >
        <div
          className="header"
        >
          Formats:
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Question matches snapshot 1`] = `
<div
  className="sc-iqcoie jxStcU openstax-question"
  data-question-number={1}
  data-test-id="question"
>
  <div
    className="sc-kDDrLX eoGjPH"
  >
    <div>
      <div
        className="sc-jSMfEi buOdRb question-stem"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Is this a question?",
          }
        }
        data-question-number={1}
      />
      <div
        aria-label="Answer choices"
        className="answers-table"
        role="radiogroup"
      >
        <div
          className="openstax-answer"
        >
          <div
            className="answers-answer disabled"
          >
            <input
              checked={false}
              className="answer-input-box"
              disabled={true}
              id="1-option-0"
              name="1-options"
              onChange={[Function]}
              type="radio"
            />
            <label
              className="answer-label"
              htmlFor="1-option-0"
            >
              <span
                aria-hidden="true"
                className="answer-letter-wrapper"
                data-answer-choice="A"
                data-test-id="answer-choice-A"
              />
              <span
                className="sc-papXJ gydcjH answer-choice-label"
              >
                Choice A:
              </span>
              <div
                className="answer-answer"
              >
                <div
                  aria-atomic="true"
                  aria-live="polite"
                  className="answer-indicator-live"
                  role="status"
                />
                <span
                  className="sc-jSMfEi buOdRb answer-content"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "True",
                    }
                  }
                />
              </div>
            </label>
          </div>
        </div>
        <div
          className="openstax-answer"
        >
          <div
            className="answers-answer disabled"
          >
            <input
              checked={false}
              className="answer-input-box"
              disabled={true}
              id="1-option-1"
              name="1-options"
              onChange={[Function]}
              type="radio"
            />
            <label
              className="answer-label"
              htmlFor="1-option-1"
            >
              <span
                aria-hidden="true"
                className="answer-letter-wrapper"
                data-answer-choice="B"
                data-test-id="answer-choice-B"
              />
              <span
                className="sc-papXJ gydcjH answer-choice-label"
              >
                Choice B:
              </span>
              <div
                className="answer-answer"
              >
                <div
                  aria-atomic="true"
                  aria-live="polite"
                  className="answer-indicator-live"
                  role="status"
                />
                <span
                  className="sc-jSMfEi buOdRb answer-content"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "False",
                    }
                  }
                />
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Question renders composed feedback below the answers 1`] = `
<div
  className="sc-iqcoie jxStcU openstax-question"
  data-question-number={1}
  data-test-id="question"
>
  <div
    className="sc-kDDrLX eoGjPH"
  >
    <div>
      <div
        className="sc-jSMfEi buOdRb question-stem"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Is this a question?",
          }
        }
        data-question-number={1}
      />
      <div
        aria-label="Answer choices"
        className="answers-table"
        role="radiogroup"
      >
        <div
          className="openstax-answer"
        >
          <div
            className="answers-answer disabled"
          >
            <input
              checked={false}
              className="answer-input-box"
              disabled={true}
              id="1-option-0"
              name="1-options"
              onChange={[Function]}
              type="radio"
            />
            <label
              className="answer-label"
              htmlFor="1-option-0"
            >
              <span
                aria-hidden="true"
                className="answer-letter-wrapper"
                data-answer-choice="A"
                data-test-id="answer-choice-A"
              />
              <span
                className="sc-papXJ gydcjH answer-choice-label"
              >
                Choice A:
              </span>
              <div
                className="answer-answer"
              >
                <div
                  aria-atomic="true"
                  aria-live="polite"
                  className="answer-indicator-live"
                  role="status"
                />
                <span
                  className="sc-jSMfEi buOdRb answer-content"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "True",
                    }
                  }
                />
              </div>
            </label>
          </div>
        </div>
        <div
          className="openstax-answer"
        >
          <div
            className="answers-answer disabled"
          >
            <input
              checked={false}
              className="answer-input-box"
              disabled={true}
              id="1-option-1"
              name="1-options"
              onChange={[Function]}
              type="radio"
            />
            <label
              className="answer-label"
              htmlFor="1-option-1"
            >
              <span
                aria-hidden="true"
                className="answer-letter-wrapper"
                data-answer-choice="B"
                data-test-id="answer-choice-B"
              />
              <span
                className="sc-papXJ gydcjH answer-choice-label"
              >
                Choice B:
              </span>
              <div
                className="answer-answer"
              >
                <div
                  aria-atomic="true"
                  aria-live="polite"
                  className="answer-indicator-live"
                  role="status"
                />
                <span
                  className="sc-jSMfEi buOdRb answer-content"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "False",
                    }
                  }
                />
              </div>
            </label>
          </div>
        </div>
      </div>
      <div
        className="sc-ftvSup gdUAsD"
        role="status"
      >
        <div
          className="detailed-solution"
        >
          <div
            className="header"
          >
            Detailed solution:
          </div>
          <div
            className="sc-jSMfEi buOdRb solution"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Content HTML",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Question renders exercise uid 1`] = `
<div
  className="sc-iqcoie jxStcU openstax-question"
  data-question-number={1}
  data-test-id="question"
>
  <div
    className="sc-kDDrLX eoGjPH"
  >
    <div>
      <div
        className="sc-jSMfEi buOdRb question-stem"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Is this a question?",
          }
        }
        data-question-number={1}
      />
      <div
        aria-label="Answer choices"
        className="answers-table"
        role="radiogroup"
      >
        <div
          className="openstax-answer"
        >
          <div
            className="answers-answer disabled"
          >
            <input
              checked={false}
              className="answer-input-box"
              disabled={true}
              id="1-option-0"
              name="1-options"
              onChange={[Function]}
              type="radio"
            />
            <label
              className="answer-label"
              htmlFor="1-option-0"
            >
              <span
                aria-hidden="true"
                className="answer-letter-wrapper"
                data-answer-choice="A"
                data-test-id="answer-choice-A"
              />
              <span
                className="sc-papXJ gydcjH answer-choice-label"
              >
                Choice A:
              </span>
              <div
                className="answer-answer"
              >
                <div
                  aria-atomic="true"
                  aria-live="polite"
                  className="answer-indicator-live"
                  role="status"
                />
                <span
                  className="sc-jSMfEi buOdRb answer-content"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "True",
                    }
                  }
                />
              </div>
            </label>
          </div>
        </div>
        <div
          className="openstax-answer"
        >
          <div
            className="answers-answer disabled"
          >
            <input
              checked={false}
              className="answer-input-box"
              disabled={true}
              id="1-option-1"
              name="1-options"
              onChange={[Function]}
              type="radio"
            />
            <label
              className="answer-label"
              htmlFor="1-option-1"
            >
              <span
                aria-hidden="true"
                className="answer-letter-wrapper"
                data-answer-choice="B"
                data-test-id="answer-choice-B"
              />
              <span
                className="sc-papXJ gydcjH answer-choice-label"
              >
                Choice B:
              </span>
              <div
                className="answer-answer"
              >
                <div
                  aria-atomic="true"
                  aria-live="polite"
                  className="answer-indicator-live"
                  role="status"
                />
                <span
                  className="sc-jSMfEi buOdRb answer-content"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "False",
                    }
                  }
                />
              </div>
            </label>
          </div>
        </div>
      </div>
      <div
        className="exercise-uid"
      >
        1@1
      </div>
    </div>
  </div>
</div>
`;

exports[`Question renders formats 1`] = `
<div
  className="sc-iqcoie jxStcU openstax-question"
  data-question-number={1}
  data-test-id="question"
>
  <div
    className="sc-kDDrLX eoGjPH"
  >
    <div>
      <div
        className="sc-jSMfEi buOdRb question-stem"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Is this a question?",
          }
        }
        data-question-number={1}
      />
      <div
        aria-label="Answer choices"
        className="answers-table"
        role="radiogroup"
      >
        <div
          className="openstax-answer"
        >
          <div
            className="answers-answer disabled"
          >
            <input
              checked={false}
              className="answer-input-box"
              disabled={true}
              id="1-option-0"
              name="1-options"
              onChange={[Function]}
              type="radio"
            />
            <label
              className="answer-label"
              htmlFor="1-option-0"
            >
              <span
                aria-hidden="true"
                className="answer-letter-wrapper"
                data-answer-choice="A"
                data-test-id="answer-choice-A"
              />
              <span
                className="sc-papXJ gydcjH answer-choice-label"
              >
                Choice A:
              </span>
              <div
                className="answer-answer"
              >
                <div
                  aria-atomic="true"
                  aria-live="polite"
                  className="answer-indicator-live"
                  role="status"
                />
                <span
                  className="sc-jSMfEi buOdRb answer-content"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "True",
                    }
                  }
                />
              </div>
            </label>
          </div>
        </div>
        <div
          className="openstax-answer"
        >
          <div
            className="answers-answer disabled"
          >
            <input
              checked={false}
              className="answer-input-box"
              disabled={true}
              id="1-option-1"
              name="1-options"
              onChange={[Function]}
              type="radio"
            />
            <label
              className="answer-label"
              htmlFor="1-option-1"
            >
              <span
                aria-hidden="true"
                className="answer-letter-wrapper"
                data-answer-choice="B"
                data-test-id="answer-choice-B"
              />
              <span
                className="sc-papXJ gydcjH answer-choice-label"
              >
                Choice B:
              </span>
              <div
                className="answer-answer"
              >
                <div
                  aria-atomic="true"
                  aria-live="polite"
                  className="answer-indicator-live"
                  role="status"
                />
                <span
                  className="sc-jSMfEi buOdRb answer-content"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "False",
                    }
                  }
                />
              </div>
            </label>
          </div>
        </div>
      </div>
      <div
        className="formats-listing"
      >
        <div
          className="header"
        >
          Formats:
        </div>
        <span>
          true-false
        </span>
      </div>
    </div>
  </div>
</div>
`;
